--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,17 @@ edition = "2024"
 anyhow = "1.0.100"
 directories = "6.0.0"
 eframe = { version = "0.33.3", features = ["persistence"] }
-longitude = { version = "0.2.1", features = ["serde"] }
+longitude = { version = "0.2.2", features = ["serde"] }
 open = "5.3.3"
-public-ip-address = { version = "0.4.0", features = ["blocking"] }
 rand = "0.9.2"
 reqwest = { version = "0.13.1", features = ["blocking", "json", "query"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
-serde_repr = "0.1.20"
-serde_url_params = "0.2.1"
-url = "2.5.8"
+common = { path = "./common" }
+public-ip-address = { version = "0.4.0", features = ["blocking"] }
+tarpc = { version = "0.37.0", features = ["serde-transport", "tcp"] }
+tokio-serde = { version = "0.9.0", features = ["cbor"] }
+tokio = { version = "1.49.0", features = ["full"] }
+
+[workspace]
+members = ["common", "server"]
