--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,7 +8,7 @@ clap = { version = "4.5.54", features = ["derive", "env"] }
 common = { path = "../common" }
 dotenvy = "0.15.7"
 futures = "0.3.31"
-longitude = "0.2.2"
+longitude = { version = "0.2.2", features = ["serde"] }
 rand = "0.9.2"
 reqwest = { version = "0.13.1", features = ["json", "query"] }
 tarpc = { version = "0.37.0", features = ["full"] }
