--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ tracing-subscriber = "0.3.22"
 dotenvy = "0.15.7"
 url = "2.5.8"
 serde_url_params = "0.2.1"
-axum = "0.8.8"
+axum = { version = "0.8.8", features = ["macros"] }
 thiserror = "2.0.18"
 axum-htmx = { version = "0.8.1", features = ["auto-vary", "guards"] }
 maud = { version = "0.27.0", features = ["axum"] }
