--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ axum = { version = "0.8.8", features = ["macros"] }
 thiserror = "2.0.18"
 axum-htmx = { version = "0.8.1", features = ["auto-vary", "guards"] }
 maud = { version = "0.27.0", features = ["axum"] }
+tower-livereload = "0.10.2"
