--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
-/target
+node_modules
+.DS_Store
+dist
+dist-ssr
+*.local
+count.txt
 .env
-/node_modules
+.nitro
+.tanstack
+.wrangler
+.output
+.vinxi
+todos.json
