--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "tailwindcss": "^4.0.6",
     "tw-animate-css": "^1.3.6",
     "vite-tsconfig-paths": "^6.0.2",
-    "zod": "^4.1.11"
+    "zod": "^4.1.11",
+    "better-auth": "^1.4.12"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.4",
